--- a/pro/02-pokemon-ssr/package.json
+++ b/pro/02-pokemon-ssr/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build && ng run 02-pokemon-ssr:prerender",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:02-pokemon-ssr": "node dist/02-pokemon-ssr/server/server.mjs"
+    "serve:ssr:pokemon-ssr": "node dist/02-pokemon-ssr/server/server.mjs",
+    "prerender:routes": "node scripts/prerender-routes.js"
   },
   "private": true,
   "dependencies": {
