--- a/pro/02-pokemon-ssr/angular.json
+++ b/pro/02-pokemon-ssr/angular.json
@@ -11,7 +11,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular/build:application",
           "options": {
             "outputPath": "dist/02-pokemon-ssr",
             "index": "src/index.html",
@@ -61,7 +61,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular/build:application",
           "configurations": {
             "production": {
               "buildTarget": "02-pokemon-ssr:build:production"
