--- a/pro/03-github-issues/package.json
+++ b/pro/03-github-issues/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/postcss": "^4.1.7",
     "@tanstack/angular-query-devtools-experimental": "^5.77.2",
     "@tanstack/angular-query-experimental": "^5.77.2",
+    "ngx-markdown": "^19.1.1",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.7",
