--- a/pro/06-i18n/package.json
+++ b/pro/06-i18n/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i18n",
+  "name": "0-i18n",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,24 +7,23 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:i18n": "node dist/i18n/server/server.mjs",
+    "serve:ssr:0-i18n": "node dist/0-i18n/server/server.mjs",
     "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^20.0.0",
-    "@angular/animations": "^20.0.0",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
-    "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
-    "@angular/ssr": "^20.0.2",
+    "@angular/ssr": "^20.0.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@tailwindcss/postcss": "^4.1.8",
-    "express": "^4.18.2",
+    "express": "^5.1.0",
     "ngx-cookie-service-ssr": "^20.0.1",
     "postcss": "^8.5.4",
     "rxjs": "~7.8.0",
@@ -33,24 +32,21 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.2",
-    "@angular/cli": "^19.0.2",
-    "@angular/compiler-cli": "^19.0.0",
-    "@types/express": "^4.17.17",
+    "@angular/build": "^20.0.0",
+    "@angular/cli": "^20.0.0",
+    "@angular/compiler-cli": "^20.0.0",
+    "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^20.17.19",
     "angular-eslint": "19.6.0",
     "eslint": "^9.27.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.1",
-    "jasmine-core": "~5.4.0",
+    "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "^3.5.3",
-    "typescript": "~5.6.2",
+    "typescript": "~5.8.2",
     "typescript-eslint": "8.32.1"
   }
 }
